--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,45 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+  * {
+    @apply box-border text-[#dcdcdc];
+  }
+
+  input,
+  select {
+    background: #00000050;
+    @apply border border-[#dcdcdc] rounded-md p-1;
+  }
+
+  html,
+  body {
+    @apply bg-ash;
+  }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    @apply font-bold;
+  }
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer components {
+  .paper {
+    @apply bg-white mx-auto my-2 overflow-clip;
+  }
+
+  .paper.letter {
+    width: 8.5in;
+    height: 11in;
+  }
+
+  .paper.a4 {
+    width: 210mm;
+    height: 297mm;
+  }
 }
